# advent-of-code

./: .gitignore  Cargo.toml  README.md
2017/clojure/day16/: project.clj
2017/clojure/day17/: README.md  project.clj
2017/clojure/day18/: README.md  project.clj
2017/clojure/day2/: CHANGELOG.md
2017/clojure/day20/: project.clj
2017/clojure/day21/: project.clj
2017/clojure/day22/: project.clj
2017/clojure/day23/: project.clj
2017/clojure/day24/: project.clj
2017/clojure/day3/: CHANGELOG.md
2017/clojure/day5/: CHANGELOG.md  README.md
2017/clojure/day6/: project.clj
2017/clojure/day7/: CHANGELOG.md  README.md  project.clj
2017/clojure/day8/: README.md  project.clj
2017/rust/: Cargo.toml
2017/rust/src/: day1.rs  day24.rs  day4.rs  day5.rs  day7.rs  lib.rs  main.rs
2018/rust/: Cargo.toml
2020/rust/: Cargo.toml  README.md
2021/: README.md
2022/: README.md
2022/rust/: Cargo.toml
2022/rust/src/: day1.rs  day10.rs  day12.rs  day14.rs  day15.rs  day16.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2023/: README.md
2023/rust/: Cargo.toml
2023/rust/src/: day1.rs  day23.rs  day3.rs  lib.rs
2024/rust/: Cargo.toml
2025/mojo/: day12.mojo  day2.mojo  day5.mojo  day6.mojo  day7.mojo
2025/python/: day1.py
day2/day2-clj/: CHANGELOG.md
day3/day3-clj/: README.md  project.clj
day5/intcode-clj/: README.md
day8/day8-clj/: CHANGELOG.md  project.clj
intcode/: CHANGELOG.md
scripts/: cleanup_lein_files.sh
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day25.rs  day3.rs  day4.rs  day5.rs  day7.rs  day9.rs  lib.rs  main.rs
(+408 files in other folders)
