[package]
name = "advent-of-code-2022"
authors = ["Mihajlo Jovanovic <mihajlo.coder@google.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "^0.3.0"
aoc-runner-derive = "^0.3.0"
itertools = "^0.10.5"
petgraph = "0.6.2"
regex = "1.7.0"
lazy_static = "1.4.0"